--- a/active_result.ejs
+++ b/active_result.ejs
@@ -529,11 +529,14 @@
                   display: flex;
                   align-items: center;
                   height: 25px;
+                  font-size: 6.17px;
+                  color: #979797;
                 "
               >
                 <img
                   src="<%= principalSignature %>"
                   style="object-fit: cover"
+                  onerror="this.onerror=null; this.parentNode.innerHTML='<%= principalSignature %>';"
                 />
               </div>
             </div>
